# lag-complexity

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  Makefile  README.md  dylint.toml  typos.local.toml  typos.toml
.github/workflows/: ci.yml  coverage-main.yml  dependabot-automerge.yml  mutation-testing.yml
docs/: adr-depth-classifier-onnx.md  complexity-antipatterns-and-refactoring-strategies.md  developers-guide.md  documentation-style-guide.md  lag-complexity-function-design.md  model-training-pipeline-design.md  model-training-pipeline-roadmap.md  opentofu-hcl-syntax-guide.md  opentofu-module-unit-testing-guide.md  roadmap.md  rstest-bdd-users-guide.md  scripting-standards.md
src/: api.rs  api_embedding.rs  cli.rs  config.rs  lib.rs  providers.rs  sigma.rs  variance.rs
src/heuristics/: ambiguity.rs  complexity.rs  depth.rs  mod.rs  text.rs
src/heuristics/ambiguity/: pronouns.rs  pronouns_tests.rs  token_classification.rs
src/providers/: mod.rs
src/providers/onnx/: aggregation.rs  artefact.rs  classifier.rs  config.rs  errors.rs  mod.rs
src/tests/: mod.rs
tests/: ambiguity_heuristic.rs  ambiguity_heuristic_bdd.rs  api_embedding.rs  api_embedding_bdd.rs  depth_heuristic.rs  depth_heuristic_bdd.rs  golden_traces.rs  lagc_args.rs  lagc_cli_bdd.rs  score_bdd.rs  sigma.rs  sigma_bdd.rs  workflows.rs
tests/features/: ambiguity_heuristic.feature  api_embedding.feature  depth_heuristic.feature  lagc_cli.feature  score.feature  sigma.feature
tests/features/heuristic_scoring/: ambiguous.feature  empty_query.feature  multi_clause.feature  pronoun_context.feature  trace_empty.feature  trace_simple.feature
tests/golden/: traces.jsonl
tests/support/: mod.rs
tests/workflow_contracts/: mutation_testing_test.py
